--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,25 +20,36 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li class="nav-item"
+              [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
+
+          <li class="nav-item" *ngIf="isAuthenticated | async" [routerLinkActive]="['link-active']">
+            <a class="nav-link" [routerLink]="['/account']">Account</a>
+          </li>
+
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
           </li>
+
+          <li class="nav-item" *ngIf="!(isAuthenticated | async)" [routerLinkActive]="['link-active']">
+            <a class="nav-link" [routerLink]="['/login']">Login</a>
+          </li>
+
+          <li class="nav-item" *ngIf="!(isAuthenticated | async)" [routerLinkActive]="['link-active']">
+            <a class="nav-link" [routerLink]="['/register']">Register</a>
+          </li>
+
+          <li class="nav-item" *ngIf="isAuthenticated | async">
+            <a class="nav-link" (click)="logout()">Logout</a>
+          </li>
+
         </ul>
-        <app-login-menu></app-login-menu>
       </div>
     </div>
   </nav>
