--- a/ClientApp/src/app/register/registration.component.html
+++ b/ClientApp/src/app/register/registration.component.html
@@ -2,29 +2,34 @@
   <form>
     <label>First name: <input class="form-control" [(ngModel)]="registrationData.firstName" name="firstName"></label><br>
 
-    <label>Last name:
+    <label>
+      Last name:
       <input class="form-control" [(ngModel)]="registrationData.lastName" name="lastName">
     </label><br>
 
-    <label>Email:
+    <label>
+      Email:
       <input class="form-control" [(ngModel)]="registrationData.email" name="email">
     </label><br>
 
-    <label>Username:
+    <label>
+      Username:
       <input class="form-control" [(ngModel)]="registrationData.username" name="username">
     </label><br>
 
-    <label>Password:
+    <label>
+      Password:
       <input type="password" class="form-control" [(ngModel)]="registrationData.password" name="password">
     </label><br>
 
-    <label>Password Confirmation:
+    <label>
+      Password Confirmation:
       <input type="password" class="form-control" [(ngModel)]="registrationData.confirmPassword" name="confirmPassword">
     </label><br>
 
-    <label>Birthday:
-      <input class="form-control" placeholder="yyyy-mm-dd"
-             name="dp" [(ngModel)]="registrationData.birthdateData" ngbDatepicker #d="ngbDatepicker">
+   <label>
+      Birthday: <input class="form-control" placeholder="yyyy-mm-dd"
+                       name="dp" [(ngModel)]="registrationData.birthdateData" ngbDatepicker #d="ngbDatepicker">
       <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">Choose</button>
     </label>
 
